general/platform-components/helm/kyverno-policies/tests/restrictIssuer/values.yaml
---
certManager:
  restrictIssuer:
    dnsZones: [example.com]
    issuerRef:
      name: approved-issuer
